--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "final-portfolio",
+  "name": "react-portfolio",
   "version": "0.1.0",
   "homepage": "https://zequilax.github.io/react-portfolio",
   "private": true,
@@ -19,6 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
